# pyproject.toml

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "datachop"
version = "1.0.0"
authors = [
  { name="Mallik Mohammad Musaddiq", email="mallikmusaddiq1@gmail.com" },
]
description = "A highly flexible and robust library for slicing and processing various data types."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Development Status :: 5 - Production/Stable",
]
keywords = ["slicing", "data", "processing", "unicode", "files", "mmap"]
dependencies = [
    # Core dependencies
]

[project.urls]
Homepage = "https://github.com/mallikmusaddiq1/datachop"
Issues = "https://github.com/mallikmusaddiq1/datachop/issues"
Documentation = "https://github.com/mallikmusaddiq1/datachop" # Placeholder

[project.optional-dependencies]
full = [
    "regex",
    "Pillow",
    "numpy",
    "charset-normalizer",
    "tqdm",
    "redis",
    "pytest",
]
dev = [
    "pytest",
    "pytest-cov",
    "twine",
    "black",
    "isort",
    "mypy",
    "pylint",
]